Added configs to enable/disable recipes, added Handheld Furnace

--- a/src/main/resources/assets/handheld_utilities/lang/en_us.json
+++ b/src/main/resources/assets/handheld_utilities/lang/en_us.json
@@ -11,6 +11,7 @@
   "item.handheld_utilities.handheld_echest": "Handheld Ender Chest",
   "item.handheld_utilities.handheld_anvil": "Handheld Anvil",
   "item.handheld_utilities.handheld_chipped_anvil": "Handheld Chipped Anvil",
-  "item.handheld_utilities.handheld_damaged_anvil": "Handheld Damaged Anvil"
+  "item.handheld_utilities.handheld_damaged_anvil": "Handheld Damaged Anvil",
+  "item.handheld_utilities.handheld_furnace": "Handheld Furnace"
 
 }
