--- a/src/main/resources/assets/handheld_utilities/lang/en_us.json
+++ b/src/main/resources/assets/handheld_utilities/lang/en_us.json
@@ -12,6 +12,7 @@
   "item.handheld_utilities.handheld_anvil": "Handheld Anvil",
   "item.handheld_utilities.handheld_chipped_anvil": "Handheld Chipped Anvil",
   "item.handheld_utilities.handheld_damaged_anvil": "Handheld Damaged Anvil",
-  "item.handheld_utilities.handheld_furnace": "Handheld Furnace"
-
+  "item.handheld_utilities.handheld_furnace": "Handheld Furnace",
+  "item.handheld_utilities.handheld_blast_furnace": "Handheld Blast Furnace",
+  "item.handheld_utilities.handheld_smoker": "Handheld Smoker"
 }
